--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.82",
@@ -21,7 +19,11 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.12.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.7.0",
+    "prettier": "^3.8.1",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.2.1"
   },
