--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.7.0",
-    "prettier": "^3.8.1",
-    "typescript": "^5.9.3",
-    "vue-tsc": "^3.2.1"
+    "prettier": "^3.8.1"
   },
   "packageManager": "pnpm@10.26.1"
 }
